artifact-registry/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: artifact-registry
  labels:
    istio-injection: enabled
